Preserve empty line in patched file (#465)
Preserve empty line in patched file